# csvcatalog

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
csvcatalog/: __init__.py  app.py  command.py  config.py  crypto.py  extractor.py  file.py  main.py  registry.py  saver.py  selector.py  storage.py  terminal.py  termutils.py  utils.py  wizard.py
csvcatalog/commands/: base.py  dbfile.py  delete.py  describe.py  export.py  extract.py  filter.py  filters.py  purge.py  search.py  settings.py  sql.py  tables.py
src/cmd/: command.py  terminal.py
src/extractor/: extractor.py
src/saver/: saver.py
