[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvcatalog"
version = "1.0"
description = "tool for creating catalog from .csv tables in duckdb/sqlite storage"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["csv", "catalog", "duckdb", "sqlite", "storage", "data", "dump"]
license = "MIT"
dependencies = [
    "platformdirs>=4.5.1",
    "tabulate>=0.9.0",
]

[project.scripts]
"csvcatalog" = "csvcatalog.main:main"
