[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvcatalog"
version = "2.1"
description = "tool for creating catalog from .csv tables in duckdb/sqlite storage"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["csv", "catalog", "duckdb", "sqlite", "storage", "data", "dump"]
license = "MIT"
dependencies = [
    "platformdirs>=4.5.1",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
"csvcatalog" = "csvcatalog.main:main"

[tool.typer]
completion = true
