[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvcatalog"
version = "2.16"
description = "tool for creating catalog from .csv tables in sqlite storage"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["csv", "catalog", "sqlite", "storage", "data", "dump"]
license = "MIT"
dependencies = [
    "platformdirs>=4.5.1",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
"csvcatalog" = "csvcatalog.main:main"

[tool.typer]
completion = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"] # ignore line too long, let formatter handle it
